(coq.theory
(package Why3Bench-pearl)
(name multiprecision.mpz_div_vcg)
(theories multiprecision.mul multiprecision.add Why3.mach.int Why3.why3.Ref Why3.mach.c multiprecision.mpz multiprecision.compare multiprecision.lemmas multiprecision.sub multiprecision.div Why3.map multiprecision.logical multiprecision.types multiprecision.util multiprecision.ptralias Why3))
