(coq.theory
(package Why3Bench-pearl)
(name multiprecision.sqrtrem_vcg)
(theories Why3.mach.c Why3.mach.int multiprecision.types multiprecision.add_1 Why3.map multiprecision.sub_1 Why3.real multiprecision.div multiprecision.mul multiprecision.logical Why3.why3.Ref multiprecision.lemmas multiprecision.sqrt Why3.mach.fxp multiprecision.ptralias multiprecision.util multiprecision.compare multiprecision.add Why3 multiprecision.sub multiprecision.toom multiprecision.valuation))
