(coq.theory
(package Why3Bench-frama_c)
(name airborne.float_quat_comp.float_quat_comp_Why3_ide_vcg)
(theories float_quat_comp.Axiomatic19 float_quat_comp.Compound Why3.Memory float_quat_comp.Axiomatic15 Why3.Cfloat Why3.Qed float_quat_comp.S9_RealVect3_s float_quat_comp.S12_RealQuatVect_s Why3.Cmath float_quat_comp.Axiomatic16 Why3))
