(coq.theory
(package Why3Bench-frama_c)
(name airborne.float_quat_of_rmat.float_quat_of_rmat_Why3_ide_vcg)
(theories float_quat_of_rmat.Axiomatic17 float_quat_of_rmat.Axiomatic18 Why3.Memory Why3.Cfloat float_quat_of_rmat.S10_RealRMat_s Why3.Qed float_quat_of_rmat.Compound float_quat_of_rmat.Axiomatic19 float_quat_of_rmat.Axiomatic15 Why3.Square Why3.Cmath float_quat_of_rmat.S11_RealQuat_s Why3))
