(coq.theory
(package Why3Bench-frama_c)
(name airborne.float_rmat_integrate_fi.float_rmat_integrate_fi_Why3_ide_vcg)
(theories Why3.Cfloat Why3 float_rmat_integrate_fi.Axiomatic15 Why3.Memory Why3.Qed Why3.Cmath float_rmat_integrate_fi.S5_FloatRMat float_rmat_integrate_fi.Compound float_rmat_integrate_fi.Globals))
