(coq.theory
(package Why3Bench-frama_c)
(name airborne.float_rmat_of_eulers_312.float_rmat_of_eulers_312_Why3_ide_vcg)
(theories Why3.Cfloat Why3 float_rmat_of_eulers_312.Compound Why3.Memory Why3.Square float_rmat_of_eulers_312.Axiomatic15 Why3.Qed Why3.Cmath float_rmat_of_eulers_312.S10_RealRMat_s float_rmat_of_eulers_312.Axiomatic17))
