(coq.theory
(package Why3Bench-frama_c)
(name airborne.float_rmat_of_eulers_321.float_rmat_of_eulers_321_Why3_ide_vcg)
(theories float_rmat_of_eulers_321.Compound Why3.Cfloat Why3 Why3.Memory Why3.Qed Why3.Cmath float_rmat_of_eulers_321.Axiomatic15 Why3.Square float_rmat_of_eulers_321.S10_RealRMat_s float_rmat_of_eulers_321.Axiomatic17))
