(coq.theory
(package Why3Bench-frama_c)
(name airborne.float_rmat_transp_vmult.float_rmat_transp_vmult_Why3_ide_vcg)
(theories float_rmat_transp_vmult.Axiomatic15 Why3.Cfloat Why3 float_rmat_transp_vmult.S9_RealVect3_s float_rmat_transp_vmult.Axiomatic17 Why3.Memory Why3.Cmath float_rmat_transp_vmult.S10_RealRMat_s Why3.Qed float_rmat_transp_vmult.Axiomatic16 float_rmat_transp_vmult.Compound))
