(coq.theory
(package Why3Bench-frama_c)
(name airborne.float_rmat_vmult.float_rmat_vmult_Why3_ide_vcg)
(theories float_rmat_vmult.Axiomatic16 float_rmat_vmult.Axiomatic17 Why3.Memory float_rmat_vmult.Axiomatic15 Why3.Cfloat Why3.Qed float_rmat_vmult.Compound float_rmat_vmult.S10_RealRMat_s Why3.Cmath float_rmat_vmult.S9_RealVect3_s Why3))
