(coq.theory
(package Why3Bench-frama_c)
(name airborne.int32_quat_comp_inv_norm_shortest.int32_quat_comp_inv_norm_shortest_Why3_ide_vcg)
(theories int32_quat_comp_inv_norm_shortest.Compound Why3.Memory Why3.Cint Why3.Qed int32_quat_comp_inv_norm_shortest.Axiomatic15 Why3 int32_quat_comp_inv_norm_shortest.S8_Int32Quat))
