(coq.theory
(package Why3Bench-frama_c)
(name standard_algorithms.adjacent_difference.adjacent_difference_Why3_ide_vcg)
(theories adjacent_difference.A_DifferenceAxiomatic Why3 Why3.Cint Why3.Memory adjacent_difference.Compound adjacent_difference.Axiomatic Why3.Qed adjacent_difference.Axiomatic1))
