(coq.theory
(package Why3Bench-frama_c)
(name standard_algorithms.adjacent_difference_inv.adjacent_difference_inv_Why3_ide_vcg)
(theories adjacent_difference_inv.A_DifferenceAxiomatic Why3 adjacent_difference_inv.Axiomatic Why3.Cint adjacent_difference_inv.Compound Why3.Memory adjacent_difference_inv.Axiomatic1 adjacent_difference_inv.Axiomatic2 Why3.Qed adjacent_difference_inv.A_AccumulateAxiomatic))
