(coq.theory
(package Why3Bench-frama_c)
(name standard_algorithms.partial_sum_inv.partial_sum_inv_Why3_ide_vcg)
(theories partial_sum_inv.Compound Why3 Why3.Cint Why3.Memory partial_sum_inv.Axiomatic partial_sum_inv.Axiomatic1 Why3.Qed partial_sum_inv.A_AccumulateAxiomatic partial_sum_inv.Axiomatic2 partial_sum_inv.A_DifferenceAxiomatic))
