(coq.theory
(package Why3Bench-pearl)
(name multiprecision.wmpn)
(theories Why3.mach.int multiprecision.mpz_abs multiprecision.add_1 multiprecision.mpz_mul multiprecision.mpz_mul2exp Why3.real multiprecision.mpz_neg multiprecision.mpz_div2exp multiprecision.set_str multiprecision.ptralias multiprecision.mpz_div Why3.why3.Ref Why3.mach.c multiprecision.toom multiprecision.valuation multiprecision.mpz_cmp multiprecision.sqrt multiprecision.lemmas multiprecision.sub multiprecision.div Why3.map multiprecision.mpz_sub multiprecision.types multiprecision.base_info multiprecision.sqrtrem Why3 Why3.mach.fxp multiprecision.powm multiprecision.add multiprecision.get_str multiprecision.compare multiprecision.mpz_getset multiprecision.mpz_set_str multiprecision.logical multiprecision.mpz_realloc2 multiprecision.util multiprecision.mpz_add multiprecision.mul multiprecision.mpz multiprecision.mpz_cmpabs multiprecision.sub_1 multiprecision.mpz_get_str multiprecision.stringlemmas))
