(coq.theory
(package Why3Bench-frama_c)
(name float_quat_comp_norm_shortest.Axiomatic19)
(theories float_quat_comp_norm_shortest.Axiomatic16 Why3.Memory Why3.Cfloat Why3.Qed float_quat_comp_norm_shortest.S12_RealQuatVect_s float_quat_comp_norm_shortest.S9_RealVect3_s Why3.Cmath float_quat_comp_norm_shortest.Compound Why3))
